# Snake_it

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  main.h
include/: main.h
